Update GeoNode gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,6 +3,7 @@ layout: base
 title: Gallery - GeoNode
 body_class: "geonode-features sites-gallery"
 ---
+
 <section class="banner">
   <div class="container">
     <div class="row">
@@ -443,14 +444,11 @@ body_class: "geonode-features sites-gallery"
 </div>
 </section>
 
-<section class="feature-details feature3" id="asiapacific">
+
+<section class="feature-details feature2" id="citydata">
   <div class="container">
     <div class="row">
-      <div class="span5">
 
-        <a href="https://citydata.be.unsw.edu.au/" target="_new"><img src=/static/img/citydata.png width="325" height="262" alt="CityData" class="feature-img thumbnail" /></a>
-
-      </div>
       <div class="span7">
 
        <div class="highlighted-box">
@@ -469,13 +467,27 @@ body_class: "geonode-features sites-gallery"
       </div>
 
     </div>
+
+    <div class="span5">
+
+      <a href="https://citydata.be.unsw.edu.au/" target="_new"><img src=../static/img/citydata.png width="325" height="262" alt="CityData" class="feature-img thumbnail" /></a>
+
+    </div>
+
   </div>
 </div>
 </section>
 
-<section class="feature-details feature2" id="africa">
+<section class="feature-details feature3" id="virtualkenya">
   <div class="container">
     <div class="row">
+
+      <div class="span5">
+
+       <a href="http://maps.virtualkenya.org" target="_new"><img src=../static/img/kenya.png width="325" height="189" alt="VirtualKenya.org" class="feature-img thumbnail" /></a>
+
+     </div>
+
       <div class="span7">
 
         <div class="highlighted-box">
@@ -494,22 +506,14 @@ body_class: "geonode-features sites-gallery"
         </div>
 
       </div>
-      <div class="span5">
 
-       <a href="http://maps.virtualkenya.org" target="_new"><img src=../static/img/kenya.png width="325" height="189" alt="VirtualKenya.org" class="feature-img thumbnail" /></a>
-
-     </div>
    </div>
  </div>
 </section>
 
-<section class="feature-details feature3" id="worldwide">
+<section class="feature-details feature2" id="worldwide">
   <div class="container">
-    <div class="row">
-      <div class="span5">
-       <a href="http://geoavalanche.org" target="_new"><img src=../static/img/geoavalanche.png width="325" height="189" alt="GeoAvalanche" class="feature-img thumbnail" /></a>
 
-     </div>
       <div class="span7">
         <div class="highlighted-box">
           <h2>GeoAvalanche</strong></h2>
@@ -527,40 +531,12 @@ body_class: "geonode-features sites-gallery"
         </div>
       </div>
 
-   </div>
- </div>
-</section>
+      <div class="row">
+        <div class="span5">
+         <a href="http://geoavalanche.org" target="_new"><img src=../static/img/geoavalanche.png width="325" height="189" alt="GeoAvalanche" class="feature-img thumbnail" /></a>
 
-<section class="feature-details feature2" id="worldwide">
-  <div class="container">
-    <div class="row">
-      <div class="span7">
+       </div>
 
-        <div class="highlighted-box">
-          <h2>Chennai Flood Management</strong></h2>
-          <h4>Open source collaborative solutions for flooding</h4>
-          <div>
-            <p>
-              ChennaiFloodManagement.org provides a platform for collaborative solutions to the complex social and environmental challenges of life on Chennai's urban floodplains.
-            </p>
-
-            <p>
-              Geonode provides Chennai with a web-based platform that connects open data, standards, tools and engineers together in one place, to produce interactive management plans that improve with time.
-            </p>
-
-            <p>
-              Find it online at <a href="http://chennaifloodmanagement.org" target="_new">ChennaiFloodManagement.org</a>.
-            </p>
-
-          </div>
-        </div>
-
-      </div>
-      <div class="span5">
-
-       <a href="http://chennaifloodmanagement.org" target="_new"><img src=../static/img/cfm.png width="325" height="189" alt="chennaifloodmanagement.org" class="feature-img thumbnail" /></a>
-
-     </div>
    </div>
  </div>
 </section>
@@ -568,11 +544,45 @@ body_class: "geonode-features sites-gallery"
 <section class="feature-details feature3" id="worldwide">
   <div class="container">
     <div class="row">
+
       <div class="span5">
-       <a href="http://aware.cirad.fr/" target="_new"><img src=../static/img/aware.png width="325" height="189" alt="AWARE" class="feature-img thumbnail" /></a>
+
+       <a href="http://chennaifloodmanagement.org" target="_new"><img src=../static/img/cfm.png width="325" height="189" alt="chennaifloodmanagement.org" class="feature-img thumbnail" /></a>
 
      </div>
-      <div class="span7">
+
+     <div class="span7">
+
+       <div class="highlighted-box">
+         <h2>Chennai Flood Management</strong></h2>
+         <h4>Open source collaborative solutions for flooding</h4>
+         <div>
+           <p>
+             ChennaiFloodManagement.org provides a platform for collaborative solutions to the complex social and environmental challenges of life on Chennai's urban floodplains.
+           </p>
+
+           <p>
+             Geonode provides Chennai with a web-based platform that connects open data, standards, tools and engineers together in one place, to produce interactive management plans that improve with time.
+           </p>
+
+           <p>
+             Find it online at <a href="http://chennaifloodmanagement.org" target="_new">ChennaiFloodManagement.org</a>.
+           </p>
+
+         </div>
+       </div>
+
+     </div>
+
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature2" id="worldwide">
+  <div class="container">
+    <div class="row">
+
+      <div class="span5">
         <div class="highlighted-box">
           <h2>AWARE</strong></h2>
           <h4>Agricultural Web Atlas for REsearch</h4>
@@ -591,31 +601,10 @@ body_class: "geonode-features sites-gallery"
         </div>
       </div>
 
-   </div>
- </div>
-</section>
-
-<section class="feature-details feature2" id="americas">
-  <div class="container">
-    <div class="row">
       <div class="span7">
+       <a href="http://aware.cirad.fr/" target="_new"><img src=../static/img/aware.png width="325" height="189" alt="AWARE" class="feature-img thumbnail" /></a>
 
-        <div class="highlighted-box">
-          <h2>SLING</strong></h2>
-          <h4>Government of Saint Lucia</h4>
-          <div>
-            <p>
-              SLING (Saint Lucia Integrated GeoNode) is a spatial data sharing portal operated by the Surveys and Mapping Section of the Government of Saint Lucia.
-            </p>
-
-            <p>
-              Find it online at <a href="http://http://sling.gosl.gov.lc/" target="_new">sling.gosl.gov.lc/</a>.
-            </p>
-
-          </div>
-        </div>
-
-      </div>
+     </div>
 
    </div>
  </div>
@@ -625,6 +614,7 @@ body_class: "geonode-features sites-gallery"
   <div class="container">
     <div class="row">
       <div class="span5">
+       <a href="http://dominode.dm/" target="_new"><img src=../static/img/dominode.png width="325" height="189" alt="DOMINODE" class="feature-img thumbnail" /></a>
 
      </div>
       <div class="span7">
@@ -658,18 +648,18 @@ body_class: "geonode-features sites-gallery"
           <h4>Developed by RCMRD-SERVIR Eastern &amp; Southern Africa </h4>
           <div>
             <p>
-              RCMRD GeoPortal is a platform for disseminating 
+              RCMRD GeoPortal is a platform for disseminating
               open geospatial datasets and products for the Eastern and Southern Africa region.
               The Regional Centre for Mapping of Resources for development (RCMRD) has partnered
-              with  <a href="https://www.usaid.gov/" target="_new"> USAID</a> and 
+              with  <a href="https://www.usaid.gov/" target="_new"> USAID</a> and
               <a href="https://www.nasa.gov/" target="_new">NASA</a> through the SERVIR-Eastern
               &amp; Southern Africa (SERVIRESA) with the objectives of improving the environmental
               management and resilience to climate change by strengthening the capacity of governments
-              and other key stakeholders to integrate Earth observation information and 
+              and other key stakeholders to integrate Earth observation information and
               geospatial technologies into development decision making.
               SERVIRESA aims at archiving more resilience outcomes in the following areas:
               Agriculture &amp; Food Security, Land use &amp; Ecosystems, Water &amp; related Disasters,
-              and Weather &amp Climate.
+              and Weather Climate.
 			    </p>
 			    <p>
               Find it online at <a href="http://geoportal.rcmrd.org" target="_new">RCMRD Geoportal</a>.
@@ -680,6 +670,279 @@ body_class: "geonode-features sites-gallery"
       </div>
       <div class="span5">
        <a href="http://geoportal.rcmrd.org" target="_new"><img src=../static/img/rcmrd.png width="325" height="189" alt="rcmrd.org" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature3" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+       <a href="http://secondarycities.geonode.state.gov/" target="_new"><img src=../static/img/secondary.png width="325" height="189" alt="Secondary Cities Geonode" class="feature-img thumbnail" /></a>
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2><strong>Secondary Cities</strong></h2>
+          <h4>U.S. Department of State</h4>
+          <div>
+            <p>
+              Building partnerships to create geospatial data on secondary cities (2C)
+            </p>
+
+            <p>
+              Find it online at <a href="http://secondarycities.geonode.state.gov/" target="_new">Secondary Cities Geonode</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>BIOPAMA</strong></h2>
+          <h4>European Union Joint Research Centre</h4>
+          <div>
+            <p>
+              The BIOPAMA project aims to build a solid information base for decision making on protected areas in the Africa, Caribbean, Pacific (ACP) region. This repository, based on GeoNode, is part of the BIOPAMA Reference Information System. Here you can discover and use maps, reports, data and other information sources, and upload your own to share with others. The themes of data you can find here cover a broad range of natural resource management and related topics.
+			    </p>
+			    <p>
+              Find it online at <a href="http://geonode-rris.biopama.org/" target="_new">BIOPAMA</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://geonode-rris.biopama.org/" target="_new"><img src=../static/img/biopama.png width="325" height="189" alt="BIOPAMA" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature3" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+       <a href="http://geonode.ingc.gov.mz" target="_new"><img src=../static/img/geosafe.png width="325" height="189" alt="GeoSAFE" class="feature-img thumbnail" /></a>
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2><strong>GeoSAFE</strong></h2>
+          <h4>Mozambique Government</h4>
+          <div>
+            <p>
+              GeoSAFE is a web platform that provides the ability to run InaSAFE analyses online.
+              InaSAFE is free software that produces realistic natural hazard impact scenarios for better planning, preparedness and response activities.
+              It provides a simple but rigorous way to combine data from scientists, local governments and communities to provide insights into the likely impacts of future disaster events.
+            </p>
+
+            <p>
+              Find it online at <a href="http://geonode.ingc.gov.mz" target="_new">GeoSAFE</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>OONDRA</strong></h2>
+          <h4>Kartoza</h4>
+          <div>
+            <p>
+              OONDRA, the Online Operational Natural Disaster Risk Assessment platform, is an open source platform based on Geonode, for sharing geospatial hazard and exposure data and maps.
+			       </p>
+			    <p>
+              Find it online at <a href="http://oondra.kartoza.com/" target="_new">OONDRA</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://oondra.kartoza.com/" target="_new"><img src=../static/img/oondra.png width="325" height="189" alt="OONDRA" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature3" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+       <a href="http://www.geodash.gov.bd/" target="_new"><img src=../static/img/geodash.png width="325" height="189" alt="GeoDASH" class="feature-img thumbnail" /></a>
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2><strong>GeoDASH</strong></h2>
+          <h4>Government of Bangladesh with World Bank</h4>
+          <div>
+            <p>
+              Open Source geospatial data management and visualization platform of Bangladesh Government.
+            </p>
+
+            <p>
+              Find it online at <a href="http://www.geodash.gov.bd/" target="_new">GeoDASH</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>RISKINFO</strong></h2>
+          <h4>Disaster Management Centre of Sri Lanka</h4>
+          <div>
+            <p>
+              A public platform for GIS Data to support development in Sri Lanka.
+              Developed in collaboration with WorldBank.
+			       </p>
+			    <p>
+              Find it online at <a href="http://www.riskinfo.lk/" target="_new">RISKINFO</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://www.riskinfo.lk/" target="_new"><img src=../static/img/riskinfo.png width="325" height="189" alt="RISKINFO" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature3" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+       <a href="http://www.cedeus.cl/" target="_new"><img src=../static/img/cedeus.png width="325" height="189" alt="CEDEUS" class="feature-img thumbnail" /></a>
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2><strong>CEDEUS</strong></h2>
+          <h4>Centro de Desarrollo Urbano Sustentable</h4>
+          <div>
+            <p>
+              Open Source geospatial data management and visualization platform.
+            </p>
+
+            <p>
+              Find it online at <a href="http://www.cedeus.cl/" target="_new">CEDEUS</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>Landscape Portal</strong></h2>
+          <h4>World Agroforestry Centre Kenia</h4>
+          <div>
+            <p>
+              The Landscape Portal is ICRAF’s interactive online spatial data storage and visualization platform. It comes with a rich set of features to store, document, search and retrieve, and visualize spatial data and maps.
+			       </p>
+			    <p>
+              Find it online at <a href="http://landscapeportal.org/" target="_new">Landscape Portal</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://landscapeportal.org/" target="_new"><img src=../static/img/landscape.png width="325" height="189" alt="Landscape Portal" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature3" id="americas">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+       <a href="http://bhuvan-suvidha.nrsc.gov.in/" target="_new"><img src=../static/img/suvidha.png width="325" height="189" alt="SUVIDHA" class="feature-img thumbnail" /></a>
+
+     </div>
+      <div class="span7">
+        <div class="highlighted-box">
+          <h2><strong>BHUVAN - SUVIDHA</strong></h2>
+          <h4>Indian National Remote Sensing Centre</h4>
+          <div>
+            <p>
+              Indian Geo-Platform of ISRO.
+            </p>
+
+            <p>
+              Find it online at <a href="http://bhuvan-suvidha.nrsc.gov.in/" target="_new">SUVIDHA</a>.
+            </p>
+
+          </div>
+        </div>
+      </div>
+
+   </div>
+ </div>
+</section>
+
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>ARPA Veneto</strong></h2>
+          <h4>ARPA Veneto Italy</h4>
+          <div>
+            <p>
+              Geoportale ARPA Veneto
+            </p>
+			    <p>
+              Find it online at <a href="http://geomap.arpa.veneto.it/" target="_new">ARPA</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://geomap.arpa.veneto.it/" target="_new"><img src=../static/img/arpa.png width="325" height="189" alt="ARPA" class="feature-img thumbnail" /></a>
      </div>
    </div>
  </div>
