--- a/gallery/index.html
+++ b/gallery/index.html
@@ -33,6 +33,52 @@ body_class: "geonode-features sites-gallery"
   </div>
 </section>
 
+<section class="feature-details feature2" id="innovationlab">
+  <div class="container">
+    <div class="row">
+	  <div class="span7">
+        <div class="highlighted-box">
+          <h2>InnovationLab</h2>
+          <h4>GFDRR InnovationLab</h4>
+          <div>
+            <p>Open data to further your understanding of disaster risk. We maintain a curation of hazard datasets at the global and country level. Tools like ThinkHazard! use these datasets in the backend.
+            </p>
+            <p>
+              Find it online at <a href="https://www.geonode-gfdrrlab.org/" target="_new">InnovationLab GeoNode</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="span5">
+        <a href="https://www.geonode-gfdrrlab.org/" target="_new"><img src=../static/img/innovationlab.png width="325" height="168" alt="InnovationLab" class="feature-img thumbnail" /></a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="feature-details feature3" id="esdac">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+        <a href="https://esdac.jrc.ec.europa.eu/viewer" target="_new"><img src=../static/img/esdac.png width="325" height="168" alt="ESDAC" class="feature-img thumbnail" /></a>
+      </div>
+	  <div class="span7">
+        <div class="highlighted-box">
+          <h2>ESDAC</h2>
+          <h4>ESDAC Map Viewer</h4>
+          <div>
+            <p>The ESDAC Map Viewer allows the user to navigate key soil data for Europe. It provides access to the attributes of the European Soil Database and some additional data related to main soil threats as identified in the Soil Thematic Strategy. The ESDAC Map Viewer is developed according to standards (OGC WMS) so that they are interoperable with similar information allowing real-time integration of environmental data from around the world.
+            </p>
+            <p>
+              Find it online at <a href="https://esdac.jrc.ec.europa.eu/viewer" target="_new">ESDAC Viewer</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="feature-details feature2" id="stategeonode">
   <div class="container">
     <div class="row">
@@ -54,6 +100,55 @@ body_class: "geonode-features sites-gallery"
       </div>
     </div>
   </div>
+</section>
+
+<section class="feature-details feature3" id="iwlearn">
+  <div class="container">
+    <div class="row">
+      <div class="span5">
+        <a href="http://geonode.iwlearn.org" target="_new"><img src=../static/img/iwlearn.png width="325" height="168" alt="IW:LEARN" class="feature-img thumbnail" /></a>
+      </div>
+	  <div class="span7">
+        <div class="highlighted-box">
+          <h2>IW:LEARN</h2>
+          <h4>IW:LEARN Spatial Lab</h4>
+          <div>
+            <p>The IW:LEARN Spatial Lab aims to provide a customizable mapping of the GEF International Waters (IW) portfolio and provide a visualization of studies, reports and intervention results on the various transboundary water basins pulled together with the help of the GEF IW projects, partner organizations and authoritative sources and other contributors.
+            </p>
+            <p>
+              Find it online at <a href="http://geonode.iwlearn.org" target="_new">IW:LEARN Spatial Lab</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="feature-details feature2" id="africa">
+  <div class="container">
+    <div class="row">
+      <div class="span7">
+
+        <div class="highlighted-box">
+          <h2>ARPA Veneto</strong></h2>
+          <h4>ARPA Veneto Italy</h4>
+          <div>
+            <p>
+              Geoportale ARPA Veneto
+            </p>
+			    <p>
+              Find it online at <a href="http://geomap.arpa.veneto.it/" target="_new">ARPA</a>.
+          </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="span5">
+       <a href="http://geomap.arpa.veneto.it/" target="_new"><img src=../static/img/arpa.png width="325" height="189" alt="ARPA" class="feature-img thumbnail" /></a>
+     </div>
+   </div>
+ </div>
 </section>
 
 <section class="feature-details feature3" id="americas">
@@ -922,30 +1017,5 @@ body_class: "geonode-features sites-gallery"
  </div>
 </section>
 
-<section class="feature-details feature2" id="africa">
-  <div class="container">
-    <div class="row">
-      <div class="span7">
-
-        <div class="highlighted-box">
-          <h2>ARPA Veneto</strong></h2>
-          <h4>ARPA Veneto Italy</h4>
-          <div>
-            <p>
-              Geoportale ARPA Veneto
-            </p>
-			    <p>
-              Find it online at <a href="http://geomap.arpa.veneto.it/" target="_new">ARPA</a>.
-          </p>
-          </div>
-        </div>
-
-      </div>
-      <div class="span5">
-       <a href="http://geomap.arpa.veneto.it/" target="_new"><img src=../static/img/arpa.png width="325" height="189" alt="ARPA" class="feature-img thumbnail" /></a>
-     </div>
-   </div>
- </div>
-</section>
 
 {% include footer.html %}
