Changed dev link
By now to http://geonode.org/dev-workshop/. Will be changed backed when docs are ready

--- a/dev_features.html
+++ b/dev_features.html
@@ -12,7 +12,7 @@ body_class: "geonode-features dev-features"
           <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
         </h1>
         <div>
-          <a href="http://docs.geonode.org/en/latest/tutorials/devel/" class="btn btn-success" target = "_blank">Follow the <strong>Developers Workshop</strong></a>
+          <a href="http://geonode.org/dev-workshop/" class="btn btn-success" target = "_blank">Follow the <strong>Developers Workshop</strong></a>
         </div>
       </div>
       <div class="span6">
