--- a/admin_features.html
+++ b/admin_features.html
@@ -12,7 +12,7 @@ body_class: "geonode-features admin-features"
           <span>Learn more about the administrative features of <strong>GeoNode</strong></span>
         </h1>
         <div class="">
-          <a href="http://docs.geonode.org/en/2.10.x/admin/index.html" class="btn btn-success" target="_blank">Follow the <strong>Administrators Workshop</strong></a>
+          <a href="http://docs.geonode.org/en/2.10/admin/index.html" class="btn btn-success" target="_blank">Follow the <strong>Administrators Workshop</strong></a>
         </div>
 
       </div>
