--- a/user_features.html
+++ b/user_features.html
@@ -13,7 +13,7 @@ body_class: "geonode-features user-features"
           <span>Learn more about the features of <strong>GeoNode</strong>.</span>
         </h1>
         <div>
-          <a href="http://docs.geonode.org/en/2.10.x/usage/index.html" class="btn btn-success" target="_blank">Follow the <strong>Users Workshop</strong></a>
+          <a href="http://docs.geonode.org/en/2.10/usage/index.html" class="btn btn-success" target="_blank">Follow the <strong>Users Workshop</strong></a>
         </div>
       </div>
       <div class="span6">
