Updated logo link as requested in #5985
https://github.com/GeoNode/geonode/issues/5985

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: GeoNode
             <a href="http://summit.geonode.org/" class="btn btn-md btn-success" target="_blank">GeoNode summit 2020</a>
           </p>
           <div class="promo-links">
-            <a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="https://svn.osgeo.org/osgeo/marketing/logo/png8/150/OSGeo_project.png"/></a>
+            <a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="static/img/OSGeo_project.png"/></a>
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
