Updated gallery page.

--- a/user_features.html
+++ b/user_features.html
@@ -7,7 +7,7 @@ body_class: "geonode-features user-features"
 <section class="banner">
   <div class="container">
     <div class="row">
-      <div class="span6">
+      <div class="col-4">
         <h1>
           <strong>For Users</strong><br />
           <span>Learn more about the features of <strong>GeoNode</strong>.</span>
@@ -16,7 +16,7 @@ body_class: "geonode-features user-features"
           <a href="https://docs.geonode.org/en/master/usage/index.html" class="btn btn-success" target="_blank">Follow the <strong>Users Workshop</strong></a>
         </div>
       </div>
-      <div class="span6">
+      <div class="col-8">
         <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
@@ -41,10 +41,10 @@ body_class: "geonode-features user-features"
 <section class="feature-details feature1" id="explore">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-4">
         <img src="{{site.baseurl}}/static/img/noun_project_17976.svg.png" width="250" height="250" alt="Explore Maps" class="feature-img" />
       </div>
-      <div class="span7 number one">
+      <div class="col-8 number one">
         <div class="highlighted-box">
           <h2>Spatial Data Discovery</h2>
           <h4>Browse and search for geospatial data</h4>
@@ -69,7 +69,7 @@ body_class: "geonode-features user-features"
 <section class="feature-details feature2" id="import">
   <div class="container">
     <div class="row">
-      <div class="span7 number two">
+      <div class="col-8 number two">
         <div class="highlighted-box">
           <h2>Import and Manage</strong></h2>
           <h4>Upload and share geospatial data, securely</h4>
@@ -91,7 +91,7 @@ body_class: "geonode-features user-features"
          <a href="import_manage.html" class="hide btn btn-success">Learn about GeoNode's data management features</a>
        </div>
      </div>
-     <div class="span5">
+     <div class="col-4">
       <img src="{{site.baseurl}}/static/img/noun_project_463.svg.png" width="220" height="220" alt="Explore Maps" class="feature-img" />
     </div>
   </div>
@@ -100,10 +100,10 @@ body_class: "geonode-features user-features"
 <section class="feature-details feature3" id="mapping">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-4">
         <img src="{{site.baseurl}}/static/img/noun_project_1670.svg.png" width="300" height="300" alt="Explore Maps" class="feature-img" />
       </div>
-      <div class="span7 number three">
+      <div class="col-8 number three">
         <div class="highlighted-box">
           <h2>Interactive Mapping</strong></h2>
           <h4>Create and share interactive web maps</h4>
