--- a/dev_features.html
+++ b/dev_features.html
@@ -6,7 +6,7 @@ body_class: "geonode-features dev-features"
 <section class="banner">
   <div class="container">
     <div class="row">
-      <div class="span6">
+      <div class="col-6">
         <h1>
           <strong>For Developers</strong>,<br />
           <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
@@ -15,7 +15,7 @@ body_class: "geonode-features dev-features"
           <a href="http://geonode.org/dev-workshop/" class="btn btn-success" target = "_blank">Follow the <strong>Developers Workshop</strong></a>
         </div>
       </div>
-      <div class="span6">
+      <div class="col-6">
         <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
@@ -24,7 +24,7 @@ body_class: "geonode-features dev-features"
 <section class="body">
   <div class="container">
     <div class="row">
-      <div class="span10">
+      <div class="col-md">
         <nav class="subnav">
           <h5>Developer Features:</h5>
           <ul class="unstyled">
@@ -42,10 +42,10 @@ body_class: "geonode-features dev-features"
 <section class="feature-details feature1" id="osgeo">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-6 col-md-4">
         <img src="{{site.baseurl}}/static/img/noun_project_8233.svg.png" width="400" height="400" alt="Open Source Geospatial" class="feature-img" />
       </div>
-      <div class="span7 number one">
+      <div class="col-12 col-md-8 number one">
         <div class="highlighted-box">
           <h2>Open Source Geospatial</strong></h2>
           <h4>Open from top to bottom</h4>
@@ -70,7 +70,7 @@ body_class: "geonode-features dev-features"
 <section class="feature-details feature2" id="django">
   <div class="container">
     <div class="row">
-      <div class="span7 number two">
+      <div class="col-12 col-md-8 number two">
         <div class="highlighted-box">
           <h2>Django</strong></h2>
           <h4>Built for the web</h4>
@@ -94,7 +94,7 @@ body_class: "geonode-features dev-features"
             <a href="django.html" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
           </div>
         </div>
-        <div class="span5">
+        <div class="col-6 col-md-4">
           <img src="{{site.baseurl}}/static/img/noun_project_2174.svg.png" width="310" height="310" alt="Explore Maps" class="feature-img" />
         </div>
       </div>
@@ -103,10 +103,10 @@ body_class: "geonode-features dev-features"
   <section class="feature-details feature3" id="front-end">
     <div class="container">
       <div class="row">
-        <div class="span5">
+        <div class="col-6 col-md-4">
           <img src="{{site.baseurl}}/static/img/noun_project_3064.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
         </div>
-        <div class="span7 number three">
+        <div class="col-12 col-md-8 number three">
           <div class="highlighted-box">
             <h2>Bootstrap and jQuery</strong></h2>
             <h4>Modern and flexible front-end</h4>
@@ -127,9 +127,9 @@ body_class: "geonode-features dev-features"
   <section class="feature-details feature4" id="apis">
     <div class="container">
       <div class="row">
-        <div class="span7 number four">
+        <div class="col-12 col-md-8 number four">
           <div class="highlighted-box">
-            <h2>APIs<strong></h2>
+            <h2>APIs</strong></h2>
             <h4>Integrate easily</h4>
             <div>
              <p>GeoNode supports multiple points for application integration. 
@@ -144,19 +144,19 @@ body_class: "geonode-features dev-features"
         <a href="apis.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
       </div>
     </div>
-    <div class="span5">
-      <img src="{{site.baseurl}}/static/img/noun_project_18273.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
-    </div>
+        <div class="col-6 col-md-4">
+            <img src="{{site.baseurl}}/static/img/noun_project_18273.svg.png" width="280" height="280" alt="Explore Maps" class="feature-img" />
+        </div>
   </div>
 </div>
 </section>
 <section class="feature-details feature5" id="interoperability">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-6 col-md-4">
         <img src="{{site.baseurl}}/static/img/noun_project_2549.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
       </div>
-      <div class="span7 number five">
+      <div class="col-12 col-md-8 number five">
         <div class="highlighted-box">
           <h2>Interoperability</strong></h2>
           <h4>Plays well with others</h4>
