Updated Admin Features page.

--- a/admin_features.html
+++ b/admin_features.html
@@ -6,7 +6,7 @@ body_class: "geonode-features admin-features"
 <section class="banner">
   <div class="container">
     <div class="row">
-      <div class="span6">
+      <div class="col-sm">
         <h1>
           <strong>For Administrators</strong><br />
           <span>Learn more about the administrative features of <strong>GeoNode</strong></span>
@@ -16,7 +16,7 @@ body_class: "geonode-features admin-features"
         </div>
 
       </div>
-      <div class="span6">
+      <div class="col-sm">
         <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
@@ -25,7 +25,7 @@ body_class: "geonode-features admin-features"
 <section class="body">
   <div class="container">
     <div class="row">
-      <div class="span12">
+      <div class="col-sm">
         <nav class="subnav">
           <h5>Administrator Features:</h5>
           <ul class="unstyled">
@@ -42,10 +42,10 @@ body_class: "geonode-features admin-features"
 <section class="feature-details feature1" id="ogcsdi">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-6 col-md-4">
         <img src="{{site.baseurl}}/static/img/noun_project_9760.svg.png" width="320" height="320" alt="Explore Maps" class="feature-img" />
       </div>
-      <div class="span7 number one">
+      <div class="col-12 col-md-8 number one">
         <div class="highlighted-box">
           <h2>Spatial Data Infrastructure</strong></h2>
           <h4>Essential components for OGC-compliant services</h4>
@@ -72,10 +72,10 @@ body_class: "geonode-features admin-features"
 <section class="feature-details feature3" id="security">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-6 col-md-4">
         <img src="{{site.baseurl}}/static/img/noun_project_3182.svg.png" width="340" height="340" alt="Explore Maps" class="feature-img" />
       </div>
-      <div class="span7 number three">
+      <div class="col-12 col-md-8 number three">
         <div class="highlighted-box">
           <h2>Security</strong></h2>
           <h4>A framework for securing your users' data</h4>
@@ -98,7 +98,7 @@ body_class: "geonode-features admin-features"
 <section class="feature-details feature4" id="scale">
   <div class="container">
     <div class="row">
-      <div class="span7 number four">
+      <div class="col-12 col-md-8 number four">
         <div class="highlighted-box">
           <h2>Scalability</strong></h2>
           <h4>Designed for reliability under all load conditions</h4>
@@ -115,7 +115,7 @@ body_class: "geonode-features admin-features"
           </div>
         </div>
       </div>
-      <div class="span5">
+      <div class="col-6 col-md-4">
         <img src="{{site.baseurl}}/static/img/noun_project_6853.svg.png" width="350" height="350" alt="Explore Maps" class="feature-img" />
       </div>
     </div>
@@ -124,10 +124,10 @@ body_class: "geonode-features admin-features"
 <section class="feature-details feature5" id="adminconsole">
   <div class="container">
     <div class="row">
-      <div class="span5">
+      <div class="col-6 col-md-4">
         <img src="{{site.baseurl}}/static/img/noun_project_18273.svg.png" width="290" height="290" alt="Explore Maps" class="feature-img" />
       </div>
-      <div class="span7 number five">
+      <div class="col-12 col-md-8 number five">
         <div class="highlighted-box">
           <h2>Administration Console</strong></h2>
           <h4>Leverage the Django Administration Console</h4>
