GeoNode website update (#95)
* Upgraded bootstrap to v5.2

* Updated date on footer.

* Corrected row alinment of hero image icon.

* Adjusted quickstart numbering offsets.

* Added font-awesome v4.7.

* Corrected placement of the navigation collapse button on small media devices.

* Scaled banner image for small and medium devices.

* Adjusted the base layout.

* Updated gallery page.

* Updated Dev Features page.

* Updated Admin Features page.

* Updated gallery page.

* Aligned important link and icons using flexbox.

* Aligned gallery hero content.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ title: GeoNode
 <section class="banner">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
         <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
           <h1>Open Source Geospatial Content Management System</h1>
           <p>
@@ -32,13 +31,12 @@ title: GeoNode
           <img src="static/img/hero_img.png" alt="" class="hero-img" />
         </div>
       </div>
-    </div>
   </div>
 </section>
 <section class="body">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col">
         <div class="box box-users">
           <a href="{{ site.baseurl }}/user_features" class="header-link">
             <header class="box-header">
@@ -54,7 +52,7 @@ title: GeoNode
           <a href = "{{ site.baseurl }}/user_features" class="btn btn-success">Take the Tour</a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col">
         <div class="box box-devs">
           <a href="{{ site.baseurl }}/dev_features" class="header-link">
             <header class="box-header">
@@ -71,7 +69,7 @@ title: GeoNode
           <a href = "{{ site.baseurl }}/dev_features" class="btn btn-success">Take the Tour</a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col">
         <div class="box box-admins">
           <a href="{{ site.baseurl }}/admin_features" class="header-link">
             <header class="box-header">
