--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,8 +6,8 @@ body_class: "geonode-features sites-gallery"
 
 <section class="banner">
   <div class="container">
-    <div class="row">
-      <div class="span12">
+    <div class="row" style="padding-top: 11%; padding-bottom: 10%;">
+      <div class="col-sm">
         <h3>Welcome to the GeoNode gallery!</h3>
         <h4>Below are instances of GeoNode being used for achieving success across a wide variety of missions, including humanitarian, development, and environmental.</h4>
       </div>
@@ -21,7 +21,7 @@ body_class: "geonode-features sites-gallery"
   <div class="container">
     <div class="row">
 	  {% if loopindex == 1 %}
-	  <div class="span7">
+	  <div class="col-8">
         <div class="highlighted-box">
           <h2>{{ item.title }}</h2>
           <h4>{{ item.subtitle }}</h4>
@@ -34,14 +34,14 @@ body_class: "geonode-features sites-gallery"
           </div>
         </div>
       </div>
-      <div class="span5">
+      <div class="col-4">
         <a href="{{ item.url }}" target="_new"><img src="../static/img/{{ item.image }}" width="325" height="168" alt="{{ item.title }}" class="feature-img thumbnail" /></a>
       </div>
 	  {% else %}
-	  <div class="span5">
+	  <div class="col-4">
         <a href="{{ item.url }}" target="_new"><img src="../static/img/{{ item.image }}" width="325" height="168" alt="{{ item.title }}" class="feature-img thumbnail" /></a>
       </div>
-	  <div class="span7">
+	  <div class="col-8">
         <div class="highlighted-box">
           <h2>{{ item.title }}</h2>
           <h4>{{ item.subtitle }}</h4>
