--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: GeoNode
 <section class="banner">
   <div class="container">
     <div class="row">
-        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
+        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 text-center">
           <h1>Open Source Geospatial Content Management System</h1>
           <p>
             GeoNode is a web-based application and platform
@@ -20,14 +20,21 @@ title: GeoNode
           <p>
             It is designed to be extended and modified, and can be integrated into existing platforms.
           </p>
-          <p>
-            <a href="http://summit.geonode.org/" class="btn btn-md btn-success" target="_blank">GeoNode summit 2020</a>
-          </p>
-          <div class="promo-links">
-            <a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="static/img/OSGeo_project.png"/></a>
+          
+          
+          <div class="row justify-content-center">
+			  <div class="promo-links">
+				<a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="static/img/OSGeo_project.png"/></a>
+			  </div>
+			  <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8 btn btn-md btn-success mt-4 mb-4">See you in Florenze at FOSS4G 2022!
+				<p class="m-0">
+					<a class="text-white d-block" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/SJP7HC/" target="_blank">Introduction to GeoNode the Open Source geospatial CMS</a>
+					<a class="text-white d-block" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/FVRPWQ/" target="_blank">GeoNode a developers introduction</a>
+				</p>
+			  </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
+        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 d">
           <img src="static/img/hero_img.png" alt="" class="hero-img" />
         </div>
       </div>
